Fix flexbox display on IE11

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 80vh;
+  height: 80vh;
 }
 
 .judgment {
